--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 ---
 layout: home
-title: JC Mariani's webpage
-subtitle: Mays the fUS be with you
+title: JC Mariani
+subtitle: May the fUS be with you
 ---
+
+Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, design and others stuffs. Enjoy the tour.
+
+<img src="https://JCMariani.github.io/assets/img/Namaste_2.png" alt="drawing" width="50%" class="center"/>
