--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: JC Mariani
 subtitle: May the fUS be with you
 ---
 
+<center>
 Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, design and others stuffs. Enjoy the tour.
-
+</center>
+  
 <img src="https://JCMariani.github.io/assets/img/Namaste_2.png" alt="drawing" width="50%" class="center"/>
