--- a/index.html
+++ b/index.html
@@ -9,3 +9,7 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
 </center>
   
 <img src="https://JCMariani.github.io/assets/img/Namaste_2.png" alt="drawing" width="50%" class="center"/>
+
+<div id="newsid" class="col-sm-4" >
+{% include news.html %}
+</div>
