--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
   
 <img src="https://JCMariani.github.io/assets/img/Namaste_2.png" alt="drawing" width="50%" class="center"/>
 
+  <div id="homeid" class="col-sm-8">
+        <h1>Here are the main sections of this website</h1>
+  </div>
+
 <div id="newsid" class="col-sm-4" >
 {% include news.html %}
 </div>
