--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
     <h2>And one more</h2>
     </div>
 
-  <div class="homeBox" id="second-column" style="background-color: #f5dfdf">
+  <div class="homeBox" id="second-column" style="background-color: #f5dfdf; margin-left: 6px; margin-right:6px">
     {% include news.html %}
   </div>
     
