--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
           <h1>Here are the main sections of this website</h1>
       </center>
   
-    <h2>Here is one content</h2>
+    <h2><a href="https://JCMariani.github.io/CV.html">Here is my resume</a></h2>
+In a nutshell:
+      - Bachelor in Mathematics/Informatics
+      - Master of Engineering in Physics/Biophysics
+      - Master of Neurotechnology
+      - PhD in Neuroscience
+      - Postdoc
     <h2>Here is one other content</h2>
     <h2>And one more</h2>
     </div>
