--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
   
     <h2><a href="https://JCMariani.github.io/CV.html">Here is my resume</a></h2>
 In a nutshell:
-      - Bachelor in Mathematics/Informatics
-      - Master of Engineering in Physics/Biophysics
-      - Master of Neurotechnology
-      - PhD in Neuroscience
-      - Postdoc
+      <ul>
+        <li>Bachelor in Mathematics/Informatics</li>
+        <li>Master of Engineering in Physics/Biophysics</li>
+        <li>Master of Neurotechnology</li>
+        <li>PhD in Neuroscience</li>
+        <li>Postdoc</li>
+      </ul>
     <h2>Here is one other content</h2>
     <h2>And one more</h2>
     </div>
