--- a/index.html
+++ b/index.html
@@ -15,8 +15,16 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
       <center>
           <h1>Here are the main sections of this website</h1>
       </center>
-  
-    <h2><a href="https://JCMariani.github.io/CV.html">Here is my resume</a></h2>
+
+    <h2><a href="https://JCMariani.github.io/PhD.html">There is my PhD thesis</a></h2>
+
+In a nutshell:
+
+      Using fUSI to image awake mouse while injecting them some drugs. I studies mainly opioids, cannabinoids and psilocybin in the hope to find fingerprints of these various pharmacological compounds.
+      
+      Im this section, I detail the thesis content and give some tips for putative curious readers that would like to know more on neuroimaging in general, then fUSI in particular, FC and other topics orbiting around my work in [Zsolt Lenkei's lab](https://ipnp.paris5.inserm.fr/research/teams-and-projects/21-team-lenkei).
+      
+    <h2><a href="https://JCMariani.github.io/CV.html">This one is my resume</a></h2>
 In a nutshell:
       <ul>
         <li>Bachelor in Mathematics/Informatics</li>
@@ -25,7 +33,6 @@ In a nutshell:
         <li>PhD in Neuroscience</li>
         <li>Postdoc</li>
       </ul>
-    <h2>Here is one other content</h2>
     <h2>And one more</h2>
     </div>
 
