--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, 
 
     <h2><a href="https://JCMariani.github.io/PhD.html">There is my PhD thesis</a></h2>
 
-In a nutshell:<br>
+In a nutshell:<br line-height="200%">
 
       Using fUSI to image awake mouse while injecting them some drugs. I studied mainly FC under the influence of opioids, cannabinoids and psilocybin in the hope to find fingerprints of these various pharmacological compounds (spoiler alert: we might have found one or two).
       <br>
