--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: May the fUS be with you
 ---
 
 <center>
-Welcome on my webpage. I am sharing here posts about my passions: Neuroscience, design and others stuffs. Enjoy the tour.
+Welcome on my webpage (which is still under construction). I am sharing here posts about my passions: Neuroscience, design and others stuffs. Enjoy the tour.
 </center>
   
 <img src="https://JCMariani.github.io/assets/img/Namaste_2.png" alt="drawing" width="50%" class="center"/>
